change row colour to orange red

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ padding: 0px 10px;
   text-decoration:none;
 }
 .row{
-  color: black;
+  color: orangered;
 }
 /*footer ends------------------*/
 
